--- a/sample.tex
+++ b/sample.tex
@@ -171,7 +171,7 @@ Collaborating with several Research labs And with Industrial Business Units
 
 \cvsection{Succès}
 
-\cvachievement{\faTrophy}{Prix Science Ouverte de la Thèse}{Mes travaux de thèse ont été récompensé par le \href{https://www.enseignementsup-recherche.gouv.fr/fr/remise-des-premiers-prix-science-ouverte-de-la-these-97810}{\color{blue}\underline{Prix Science Ouverte} par le Ministère de l'enseignement supérieur et de la recherche }}
+\cvachievement{\faTrophy}{Prix Science Ouverte de la Thèse}{Mes travaux de thèse ont été récompensés par le \href{https://www.enseignementsup-recherche.gouv.fr/fr/remise-des-premiers-prix-science-ouverte-de-la-these-97810}{\color{blue}\underline{Prix Science Ouverte}}par le Ministère de l'enseignement supérieur et de la recherche }
 
 \divider
 
