fix de quelque date

--- a/sample.tex
+++ b/sample.tex
@@ -153,7 +153,7 @@ Collaborating with several Research labs And with Industrial Business Units
 
 \cvsection{Projets}
 
-\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021 -- Aujourd'hui}{Grenoble, FRANCE}
+\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2020 -- Aujourd'hui}{Grenoble, FRANCE}
 \begin{itemize}
 \item Connecter Pharo avec VSCode
 \item +21 étoiles GitHub, +1700 téléchargements
@@ -161,7 +161,7 @@ Collaborating with several Research labs And with Industrial Business Units
 
 \divider
 
-\cvevent{Casino}{Inria RMoD}{Février 2018 -- Aujourd'hui}{Lille, FRANCE}
+\cvevent{Casino}{Inria RMoD}{Février 2018 -- Décembre 2023}{Lille, FRANCE}
 
 \begin{itemize}
 \item Outil utilisant l'IDM permettant la migration d'application
