--- a/sample.tex
+++ b/sample.tex
@@ -72,8 +72,8 @@
 \newcommand{\bl}{Berger-Levrault}
 
 \begin{document}
-\name{Beno{\^\i}t Verhaeghe}
-\tagline{Docteur en Génie Logiciel}
+\name{Benoit Verhaeghe, Ph.D.}
+\tagline{Leading Advanced Software Engineering Innovations}
 %% You can add multiple photos on the left or right
 \photoR{2.8cm}{profil}
 
@@ -81,8 +81,8 @@
   % Not all of these are required!
   \email{work@badetitou.fr}
   \phone{+33 6 58 33 53 74}
-  \mailaddress{34bis, avenue Jean Jaurès}
-  \location{38600 Fontaine, FRANCE}
+  \mailaddress{4, rue de la Moselle}
+  \location{38100 Grenoble, FRANCE}
   \homepage{badetitou.fr}
   \twitter{@badetitou}
   \linkedin{benoitverhaeghe}
