--- a/sample.tex
+++ b/sample.tex
@@ -103,19 +103,20 @@
 
 \cvsection{Experiences}
 
-\cvevent{Responsable de projets scientifiques}{Berger-levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
+\cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
 
 \begin{itemize}
-\item Manage research projects about 
-\item GreenIT 
-\item AI for code
-\item Code migration and modernization 
-\item Tests Generation
+\item Gestion de projets de recherche sur :
+\item GreenIT
+\item IA pour le code
+\item Migration et modernisation de code
+\item Génération de tests
 \end{itemize}
 
-Also Managing a team of Researchers, Engineers, and PhD students
+Gestion également d'une équipe de 5 chercheurs et ingénieurs et de plusieurs doctorants
 
-Collaborating with several Research labs And with Industrial Business Units
+Collaboration avec plusieurs laboratoires de recherche et unités industrielles
+
 
 \divider
 
