improve fr version cv

--- a/sample.tex
+++ b/sample.tex
@@ -105,17 +105,11 @@
 \cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
 
 \begin{itemize}
-\item Gestion de projets de recherche sur :
-\item GreenIT
-\item IA pour le code
-\item Migration et modernisation de code
-\item Génération de tests
+\item Gestion de projets de recherche sur : IA4Code, GreenIT, Modernisation
+\item Management d'une équipe de chercheurs, d'ingénieurs et de doctorants
+\item Élaboration de la feuille de route et planification
+\item Collaboration avec des laboratoires de recherche et des business units
 \end{itemize}
-
-Gestion également d'une équipe de 5 chercheurs et ingénieurs et de plusieurs doctorants
-
-Collaboration avec plusieurs laboratoires de recherche et unités industrielles
-
 
 \divider
 
@@ -141,10 +135,6 @@ Collaboration avec plusieurs laboratoires de recherche et unités industrielles
 \divider
 
 \cvevent{Ingénieur Logiciel}{Berger-Levrault}{Mars 2018 -- Décembre 2018}{Montpellier, FRANCE}
-\begin{itemize}
-  \item Analyse de l’architecture des applications de Berger-Levrault
-  \item Développement d'outils pour la migration de GWT vers Angular
-\end{itemize}
 
 \divider
 
@@ -171,7 +161,7 @@ Collaboration avec plusieurs laboratoires de recherche et unités industrielles
 
 \cvsection{Succès}
 
-\cvachievement{\faTrophy}{Prix Science Ouverte de la Thèse}{Mes travaux de thèse ont été récompensés par le \href{https://www.enseignementsup-recherche.gouv.fr/fr/remise-des-premiers-prix-science-ouverte-de-la-these-97810}{\color{blue}\underline{Prix Science Ouverte}}par le Ministère de l'enseignement supérieur et de la recherche }
+\cvachievement{\faTrophy}{Prix Science Ouverte de la Thèse}{Mes travaux de thèse ont été récompensés par le \href{https://www.enseignementsup-recherche.gouv.fr/fr/remise-des-premiers-prix-science-ouverte-de-la-these-97810}{\color{blue}\underline{Prix Science Ouverte}} par le Ministère de l'enseignement supérieur et de la recherche }
 
 \divider
 
@@ -204,6 +194,8 @@ Collaboration avec plusieurs laboratoires de recherche et unités industrielles
 \cvtag{GWT}
 \cvtag{Spring}
 \cvtag{REST}
+\cvtag{Communication}
+\cvtag{Gestion de projet}
 
 \cvsection{Formation}
 
@@ -243,7 +235,23 @@ Formation centrée sur le le génie logiciel et les analyses statistiques (Data 
 
 \cvsection{Experiences}
 
-\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
+
+\begin{itemize}
+\item Gestion de projets de recherche sur :
+\item GreenIT
+\item IA pour le code
+\item Migration et modernisation de code
+\item Génération de tests
+\end{itemize}
+
+Gestion également d'une équipe de 5 chercheurs et ingénieurs et de plusieurs doctorants
+
+Collaboration avec plusieurs laboratoires de recherche et unités industrielles
+
+\divider
+
+\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021 -- Décembre 2023}{Lyon, FRANCE}
 \begin{itemize}
   \item Migration d'applications (Projets Casino -- IDM)
   \item Analyse de la qualité des applications de l'entreprise (Moose/IDM)
@@ -302,7 +310,7 @@ J'ai aussi lancer en interne un projet d'analyse des logiciels de l'entreprise e
 
 \cvsection{Projets}
 
-\cvevent{Pharo Language Server}{Projet personnel}{Décembre 2021 -- 2023}{Grenoble, FRANCE}
+\cvevent{Pharo Language Server}{Projet personnel}{Décembre 2020 -- Aujourd'hui}{Grenoble, FRANCE}
 \begin{itemize}
 \item Connecter Pharo avec VSCode
 \item +33 étoiles GitHub
