french version IA4Code

--- a/sample.tex
+++ b/sample.tex
@@ -105,7 +105,7 @@
 \cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
 
 \begin{itemize}
-\item Gestion de projets de recherche sur : IA4Code, GreenIT, Modernisation
+\item Gestion de projets de recherche sur : IA pour le code, GreenIT, Modernisation
 \item Management d'une équipe de chercheurs, d'ingénieurs et de doctorants
 \item Élaboration de la feuille de route et planification
 \item Collaboration avec des laboratoires de recherche et des business units
