--- a/sample.tex
+++ b/sample.tex
@@ -194,6 +194,15 @@
 \cvtag{GWT}
 \cvtag{Spring}
 \cvtag{REST}
+
+\divider
+
+\cvtag{Git}
+\cvtag{Jenkins}
+\cvtag{GitHub actions}
+
+\divider
+
 \cvtag{Communication}
 \cvtag{Gestion de projet}
 
