--- a/sample.tex
+++ b/sample.tex
@@ -57,12 +57,12 @@
 %% Use (and optionally edit if necessary) this .cfg if you
 %% want to use an author-year reference style like APA(6)
 %% for your publication list
-\input{pubs-authoryear.cfg}
+%\input{pubs-authoryear.cfg}
 
 %% Use (and optionally edit if necessary) this .cfg if you
 %% want an originally numerical reference style like IEEE
 %% for your publication list
-% \input{pubs-num.cfg}
+\input{pubs-num.cfg}
 
 %% sample.bib contains your publications
 \addbibresource{sample.bib}
