--- a/sample.tex
+++ b/sample.tex
@@ -104,22 +104,24 @@
 
 \cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
 
+Gestion de projets de recherche sur :
+\break
 \begin{itemize}
-\item Gestion de projets de recherche sur : IA pour le code, GreenIT, Modernisation
-\item Management d'une équipe de chercheurs, d'ingénieurs et de doctorants
-\item Élaboration de la feuille de route et planification
-\item Collaboration avec des laboratoires de recherche et des business units
+\item \textbf{IA pour le code} : Intégration de l’IA dans les Merge Requests et les IDE ; utilisation de MCP et des fonctionnalités de tool-calling ; intégration de nouveaux tool-calling dans les IDE ; mesure de l’impact réel sur les équipes de production
+\item \textbf{GreenIT} : Mesure de la consommation énergétique de l’infrastructure et du code
+\item \textbf{Cartographie du code} : Représentation du code sous forme de cartes pour comprendre, planifier et moderniser des applications à très grande échelle
 \end{itemize}
+Gestion également d’une équipe de 5 chercheurs et ingénieurs ainsi que de plusieurs doctorants.
+Planification de la feuille de route à long terme de l’équipe et pilotage de la collaboration avec plusieurs laboratoires de recherche (Inria) et unités industrielles.
 
 \divider
 
-\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021 -- Décembre 2023}{Lyon, FRANCE}
+\cvevent{Ingénieur R\&D}{Berger-Levrault}{Novembre 2021 -- Décembre 2023}{Lyon, France}
+
 \begin{itemize}
-  \item Migration d'applications (Projets Casino -- MDE)
-  \item Analyse de la qualité des applications de l'entreprise (Moose/MDE)
+  \item Migration d’applications Java (GWT et Swing) de plus d’un million de lignes de code vers Angular
   \item Encadrement de doctorants et de stagiaires
-  \item Écriture de papiers de recherche
-  \item Suivi du contrat cadre signé entre Berger-Levrault et Inria
+  \item Rédaction de publications scientifiques
 \end{itemize}
 
 \divider
