--- a/sample.tex
+++ b/sample.tex
@@ -145,10 +145,19 @@ Planification de la feuille de route à long terme de l’équipe et pilotage de
 
 \cvsection{Projets}
 
-\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2020 -- Aujourd'hui}{Grenoble, FRANCE}
+\cvevent{Pharo Language Server}{Personnel}{Décembre 2020 -- Aujourd'hui}{Grenoble, FRANCE}
 \begin{itemize}
 \item Connecter Pharo avec VSCode
 \item +33 étoiles GitHub, +4000 téléchargements
+\end{itemize}
+
+\divider
+
+\cvevent{Pharo LibVLC}{Personnel}{Décembre 2020 -- Aujourd'hui}{Lille, FRANCE}
+
+\begin{itemize}
+\item Connecter Pharo avec VLC
+\item Utilisation de librairie partagé et appel FFI
 \end{itemize}
 
 \divider
@@ -191,17 +200,19 @@ Planification de la feuille de route à long terme de l’équipe et pilotage de
 
 \cvtag{Pharo}
 \cvtag{MDE}
-\cvtag{Java/JEE}
+\cvtag{Java}
 \cvtag{Angular}
-\cvtag{GWT}
-\cvtag{Spring}
 \cvtag{REST}
+\divider
+
+\cvtag{Optimisation}
+\cvtag{TDD}
 
 \divider
 
 \cvtag{Git}
 \cvtag{Jenkins}
-\cvtag{GitHub/GitLab CI/CD}
+\cvtag{GitHub / GitLab CI/CD}
 
 \divider
 
