more precise on some competence

--- a/sample.tex
+++ b/sample.tex
@@ -108,10 +108,10 @@ Gestion de projets de recherche et développement sur :
 \begin{itemize}
 \item \textbf{IA pour le code} : Intégration de l’IA dans les Merge Requests et les IDE ; utilisation de MCP et des fonctionnalités de tool-calling ; intégration de nouveaux tool-calling dans les IDE ; mesure de l’impact réel sur les équipes de production
 \item \textbf{GreenIT} : Mesure de la consommation énergétique de l’infrastructure et du code
-\item \textbf{Cartographie du code} : Représentation du code sous forme de cartes pour comprendre, planifier et moderniser des applications à très grande échelle
+\item \textbf{Cartographie de l'architecture logiciel} : Représentation du code sous forme de cartes pour comprendre, planifier et moderniser des applications à très grande échelle
 \end{itemize}
 
-Gestion d’une équipe de 5 chercheurs et ingénieurs ainsi que de plusieurs doctorants.
+Gestion d’une équipe de 5 chercheurs et ingénieurs ainsi que de plusieurs doctorants
 Planification de la feuille de route à long terme de l’équipe et pilotage de la collaboration avec plusieurs laboratoires de recherche (Inria) et unités industrielles.
 
 \divider
@@ -206,7 +206,8 @@ Planification de la feuille de route à long terme de l’équipe et pilotage de
 \divider
 
 \cvtag{Optimisation}
-\cvtag{TDD}
+\cvtag{Test Driven Development}
+\cvtag{Analyse Architecture Logiciel}
 
 \divider
 
@@ -259,17 +260,18 @@ Formation centrée sur le le génie logiciel et les analyses statistiques (Data 
 
 \cvevent{Responsable de projets scientifiques}{Berger-Levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
 
+
+Gestion de projets de recherche et développement sur :
 \begin{itemize}
-\item Gestion de projets de recherche sur :
-\item GreenIT
-\item IA pour le code
-\item Migration et modernisation de code
-\item Génération de tests
+\item \textbf{IA pour le code} : Intégration de l’IA dans les Merge Requests et les IDE ; utilisation de MCP et des fonctionnalités de tool-calling ; intégration de nouveaux tool-calling dans les IDE ; mesure de l’impact réel sur les équipes de production
+\item \textbf{GreenIT} : Mesure de la consommation énergétique de l’infrastructure et du code
+\item \textbf{Cartographie de l'architecture logiciel} : Représentation du code sous forme de cartes pour comprendre, planifier et moderniser des applications à très grande échelle
 \end{itemize}
 
-Gestion également d'une équipe de 5 chercheurs et ingénieurs et de plusieurs doctorants
+Gestion d’une équipe de 5 chercheurs et ingénieurs ainsi que de plusieurs doctorants.
+Encadrement de thèse sur: \textbf{Selection de tests} ; \textbf{Generation de tests} ; \textbf{Microservicisation d'application} ; \textbf{localisation de code métier}.
 
-Collaboration avec plusieurs laboratoires de recherche et unités industrielles
+Planification de la feuille de route à long terme de l’équipe et pilotage de la collaboration avec plusieurs laboratoires de recherche (Inria) et unités industrielles.
 
 \divider
 
@@ -296,10 +298,7 @@ J'ai aussi lancer en interne un projet d'analyse des logiciels de l'entreprise e
 \item Enseignements
 \item Écriture de blog post sur la platforme Moose
 \begin{itemize}
-  \item \url{https://modularmoose.org/2022/10/27/test-your-moose-code-using-ci.html}
-  \item \url{https://modularmoose.org/2021/10/01/migrating-internationalization.html}
-  \item \url{https://modularmoose.org/2021/07/19/automatic-metamodel-documentation-generation.html}
-  \item \url{https://modularmoose.org/2021/05/15/connecting-meta-models.html}
+  \item \url{https://modularmoose.org/blog/authors/benoit-verhaeghe/}
 \end{itemize}
 
 \end{itemize}
